@@ -517,9 +517,19 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
+                            <useModulePath>false</useModulePath>
+                            <excludes>
+                                <exclude>**/module-info.java</exclude>
+                            </excludes>
                             <compilerArgs>
                                 <arg>--add-modules</arg>
-                                <arg>jdk.incubator.vector</arg>
+                                <arg>jdk.incubator.vector,jdk.unsupported</arg>
+                                <arg>--add-reads</arg>
+                                <arg>org.vectrix=ALL-UNNAMED</arg>
+                                <arg>--add-reads</arg>
+                                <arg>org.vectrix=jdk.incubator.vector</arg>
+                                <arg>--add-reads</arg>
+                                <arg>org.vectrix=jdk.unsupported</arg>
                             </compilerArgs>
                             <annotationProcessorPaths>
                                 <path>
